@@ -1,49 +1,55 @@
-package npg_tracking::glossary::composition::component;
+package npg_tracking::glossary::composition::component::illumina;
 
-use Moose::Role;
-use MooseX::Storage;
-use Carp;
+use Moose;
+use MooseX::StrictConstructor;
+use namespace::autoclean;
 
-with Storage( 'traits' => ['OnlyWhenBuilt'],
-              'format' => '=npg_tracking::glossary::composition::serializable' );
+with qw( npg_tracking::glossary::composition::component
+         npg_tracking::glossary::run
+         npg_tracking::glossary::lane
+         npg_tracking::glossary::subset
+         npg_tracking::glossary::tag );
 
 our $VERSION = '0';
 
-sub compare_serialized {
-  my ($self, $other) = @_;
-
-  if (!defined $other) {
-    croak 'Object to compare to should be given';
-  }
-  my $pname = ref $self;
-  my $type  = ref $other;
-  if (!$type || $type ne $pname) {
-    croak qq[Expect object of class $pname to compare to];
-  }
-
-  return ($self->freeze cmp $other->freeze);
-}
-
-no Moose::Role;
+__PACKAGE__->meta->make_immutable;
 1;
 __END__
 
 =head1 NAME
 
-npg_tracking::glossary::composition::component
+npg_tracking::glossary::composition::component::illumina
 
 =head1 SYNOPSIS
 
 =head1 DESCRIPTION
 
-A Moose role defining a common interface for a sequencing component.
+Serializable component (illumina lane, lanelet or part of either of them) definition.
 
 =head1 SUBROUTINES/METHODS
 
+=head2 position
+
+See npg_tracking::glossary::position.
+
+=head2 id_run
+
+See npg_tracking::glossary::run.
+
+=head2 tag_index
+
+An optional tag index that uniquely identifies a component
+in a multiplexed lane. See npg_tracking::glossary::tag
+
+=head2 subset
+
+An optional attribute, will default to 'target'.
+See npg_tracking::glossary::subset.
+
 =head2 compare_serialized
 
-Compares this object to other object of teh same type as JSON serializations.
-'cmp' function is used, the outcome of the comparison is returned.
+Compares this object to other illumina component object, see
+the parent method in npg_tracking::glossary::composition::component.
 
 =head2 thaw
 
@@ -65,11 +71,21 @@ See digest() in npg_tracking::glossary::composition::serializable.
 
 =over
 
-=item Moose::Role
+=item Moose
 
-=item MooseX::Storage
+=item MooseX::StrictConstructor
 
-=item Carp
+=item namespace::autoclean
+
+=item npg_tracking::glossary::composition::component
+
+=item npg_tracking::glossary::run
+
+=item npg_tracking::glossary::lane
+
+=item npg_tracking::glossary::subset
+
+=item npg_tracking::glossary::tag
 
 =back
 
