@@ -1,6 +1,7 @@
 CHANGES
 
- - serializable sequence composition framework added
+ - generic serializable sequence composition framework and illumina
+   sequencing specific component
 
 release 84.8
  - jenkins daemon definition: remove hardcoded path to prod user home directory
